practice/4.ingress/host-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: my.sXXXXXX.edu.slurm.io
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
